# Multiverse-Knowledge

./: .gitmodules  install.sh  requirements.txt
knowrob_connector/: CMakeLists.txt  Dockerfile  README.md  build_knowrob_connector.sh
knowrob_connector/owl/: SOMA-Montessori.owl
knowrob_connector/resources/: montessori_toys.xml
knowrob_connector/scripts/: multiverse_reasoner_test.py
knowrob_connector/settings/: multiverse.json
knowrob_connector/src/: knowrob_connector.cpp
